--- a/index.html
+++ b/index.html
@@ -10,70 +10,76 @@
     <header>
       <!-- Head Information -->
       <div>
-        <a href="/">
-          <img src="images/Logo.jpg" alt="Webstudio Logo" />
-        </a>
         <nav>
-          <a href="images/Studio/(1).jpg">Studio</a>
-
-          <a href="images/Portfolio/(1).jpg">Portfolio</a>
-
-          <a href="images/Contacts/(1).jpg">Contacts</a>
+          <a href="./index.html"> Webstudio </a>
+          <ul>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
+          </ul>
         </nav>
         <address>
-          <a href="/">info@devstudio.com</a>
-          <a href="/">+11 (000) 111-11-11</a>
+          <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          </ul>
         </address>
-      </div>
-      <div>
-        <!-- Title and Button -->
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
       </div>
     </header>
     <main>
-      <!-- Description Section1 -->
+      <section>
+        <!-- Title and Button -->
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+
+      <!-- Description Section2 -->
       <section>
         <ul>
           <li>
             <h3>Strategy</h3>
-            <p>problem to walk away with the perfect and creative solution.</p>
+            <p>
+              Our goal is to identify the business<br />
+              problem to walk away with the<br />
+              perfect and creative solution.
+            </p>
           </li>
           <li>
             <h3>Punctuality</h3>
             <p>
-              Bring the key message to the brand's audience for the best price
+              Bring the key message to the<br />
+              brand's audience for the best price<br />
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3>Diligence</h3>
             <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
+              Research and confirm brands that<br />
+              present the strongest digital growth<br />
+              opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3>Technologies</h3>
             <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
+              Design practice focused on digital<br />
+              experiences. We bring forth a deep<br />
+              passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <!-- Team Photo Section2 -->
+      <!-- Team Photo Section3 -->
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
             <a
-              ><img
-                src="images/img(1).jpg"
-                alt="Designer Photo"
-                width="264"
-              />Mark Guerrero Product Designer</a
-            >
+              ><img src="images/img(1).jpg" alt="Designer Photo" width="264"
+            /></a>
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <a
@@ -83,17 +89,16 @@
               Developer Photo"
                 width="264"
               />
-              Tom Ford Frontend Developer</a
-            >
+            </a>
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <a
-              ><img
-                src="images/img.jpg"
-                alt="Marketing Photo"
-                width="264"
-              />Camila Garcia Marketing</a
-            >
+              ><img src="images/img.jpg" alt="Marketing Photo" width="264"
+            /></a>
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <a
@@ -103,8 +108,9 @@
               Designer Photo"
                 width="264"
               />
-              Daniel Wilson UI Designer</a
-            >
+            </a>
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -112,12 +118,11 @@
     <footer>
       <!-- Footer Info -->
       <div>
-        <a href="/">
-          <img src="images/Logo.jpg" alt="Webstudio Logo" />
-        </a>
+        <a href="./index.html"> Webstudio </a>
         <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
+          Increase the flow of customers and<br />
+          sales for your business with digital<br />
+          marketing & growth solutions.
         </p>
       </div>
     </footer>
