--- a/index.html
+++ b/index.html
@@ -9,22 +9,19 @@
   <body>
     <header>
       <!-- Head Information -->
-      <div>
-        <nav>
-          <a href="./index.html"> Webstudio </a>
-          <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
-          </ul>
-        </nav>
-        <address>
-          <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-          </ul>
-        </address>
-      </div>
+
+      <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      </address>
     </header>
     <main>
       <section>
@@ -35,13 +32,14 @@
 
       <!-- Description Section2 -->
       <section>
+        <h2>Strategy</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3>Strategy Punctuality Diligence Technologies</h3>
             <p>
               Our goal is to identify the business<br />
               problem to walk away with the<br />
-              perfect and creative solution.
+              perfect and creative solution.<br />
             </p>
           </li>
           <li>
@@ -49,7 +47,7 @@
             <p>
               Bring the key message to the<br />
               brand's audience for the best price<br />
-              within the shortest possible time.
+              within the shortest possible time.<br />
             </p>
           </li>
           <li>
@@ -57,7 +55,7 @@
             <p>
               Research and confirm brands that<br />
               present the strongest digital growth<br />
-              opportunities and minimize risk.
+              opportunities and minimize risk.<br />
             </p>
           </li>
           <li>
@@ -65,7 +63,7 @@
             <p>
               Design practice focused on digital<br />
               experiences. We bring forth a deep<br />
-              passion for problem-solving.
+              passion for problem-solving.<br />
             </p>
           </li>
         </ul>
@@ -76,7 +74,7 @@
         <ul>
           <li>
             <a
-              ><img src="images/img(1).jpg" alt="Designer Photo" width="264"
+              ><img src="./images/img(1).jpg" alt="Designer Photo" width="264"
             /></a>
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -84,7 +82,7 @@
           <li>
             <a
               ><img
-                src="images/img(5).jpg"
+                src="./images/img(5).jpg"
                 alt="Frontend
               Developer Photo"
                 width="264"
@@ -95,7 +93,7 @@
           </li>
           <li>
             <a
-              ><img src="images/img.jpg" alt="Marketing Photo" width="264"
+              ><img src="./images/img.jpg" alt="Marketing Photo" width="264"
             /></a>
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -103,7 +101,7 @@
           <li>
             <a
               ><img
-                src="images/img(4).jpg"
+                src="./images/img(4).jpg"
                 alt="UI
               Designer Photo"
                 width="264"
@@ -117,14 +115,13 @@
     </main>
     <footer>
       <!-- Footer Info -->
-      <div>
-        <a href="./index.html"> Webstudio </a>
-        <p>
-          Increase the flow of customers and<br />
-          sales for your business with digital<br />
-          marketing & growth solutions.
-        </p>
-      </div>
+
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and<br />
+        sales for your business with digital<br />
+        marketing & growth solutions.<br />
+      </p>
     </footer>
   </body>
 </html>
