--- a/index.html
+++ b/index.html
@@ -39,33 +39,29 @@
           <li>
             <h3>Strategy</h3>
             <p>
-              Our goal is to identify the business<br />
-              problem to walk away with the<br />
-              perfect and creative solution.<br />
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
             </p>
           </li>
           <li>
             <h3>Punctuality</h3>
             <p>
-              Bring the key message to the<br />
-              brand's audience for the best price<br />
-              within the shortest possible time.<br />
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
             </p>
           </li>
           <li>
             <h3>Diligence</h3>
             <p>
-              Research and confirm brands that<br />
-              present the strongest digital growth<br />
-              opportunities and minimize risk.<br />
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3>Technologies</h3>
             <p>
-              Design practice focused on digital<br />
-              experiences. We bring forth a deep<br />
-              passion for problem-solving.<br />
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
@@ -75,40 +71,34 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <a
-              ><img src="./images/img(1).jpg" alt="Designer Photo" width="264"
-            /></a>
+            <img src="./images/img(1).jpg" alt="Designer Photo" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <a
-              ><img
-                src="./images/img(5).jpg"
-                alt="Frontend
+            <img
+              src="./images/img(5).jpg"
+              alt="Frontend
               Developer Photo"
-                width="264"
-              />
-            </a>
+              width="264"
+            />
+
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <a
-              ><img src="./images/img.jpg" alt="Marketing Photo" width="264"
-            /></a>
+            <img src="./images/img.jpg" alt="Marketing Photo" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <a
-              ><img
-                src="./images/img(4).jpg"
-                alt="UI
+            <img
+              src="./images/img(4).jpg"
+              alt="UI
               Designer Photo"
-                width="264"
-              />
-            </a>
+              width="264"
+            />
+
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -120,9 +110,8 @@
 
       <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and<br />
-        sales for your business with digital<br />
-        marketing & growth solutions.<br />
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
