--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src=./images/img(1).jpg alt=Designer Photo width=264 />
+            <img src="./images/img1.jpg" alt="Designer" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img
-              src="./images/img(5).jpg"
+              src="./images/img2.jpg"
               alt="Frontend
               Developer Photo"
               width="264"
@@ -100,13 +100,13 @@
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img.jpg" alt="Marketing Photo" width="264" />
+            <img src="./images/img3.jpg" alt="Marketing Photo" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./images/img(4).jpg"
+              src="./images/img4.jpg"
               alt="UI
               Designer Photo"
               width="264"
@@ -122,17 +122,13 @@
         <h2>Our Portfolio</h2>
         <ul>
           <li>
-            <img
-              src="./images/img (6).jpg"
-              alt="Banking App Photo"
-              width="360"
-            />
+            <img src="./images/img5.jpg" alt="Banking App Photo" width="360" />
             <h3>Banking App</h3>
             <p>App</p>
           </li>
           <li>
             <img
-              src="./images/img (1).jpg"
+              src="./images/img6.jpg"
               alt="Cashless Payment Photo"
               width="360"
             />
@@ -141,7 +137,7 @@
           </li>
           <li>
             <img
-              src="./images/img (2).jpg"
+              src="./images/img7.jpg"
               alt="Meditation App Photo"
               width="360"
             />
@@ -149,17 +145,13 @@
             <p>App</p>
           </li>
           <li>
-            <img
-              src="./images/img (3).jpg"
-              alt="Taxi Service Photo"
-              width="360"
-            />
+            <img src="./images/img8.jpg" alt="Taxi Service Photo" width="360" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./images/img (4).jpg"
+              src="./images/img9.jpg"
               alt="Screen Illustrations Photo"
               width="360"
             />
@@ -168,7 +160,7 @@
           </li>
           <li>
             <img
-              src="./images/img (5).jpg"
+              src="./images/img10.jpg"
               alt="Online Courses Photo"
               width="360"
             />
