--- a/index.html
+++ b/index.html
@@ -20,29 +20,45 @@
   </head>
 
   <body>
-    <header>
+    <header class="header-container">
       <!-- Head Information -->
 
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo-web" href="./index.html"
+          >Web<span class="logo-studio">Studio</span></a
+        >
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li>
+            <a class="studio-header" href="">Studio</a>
+          </li>
+          <li>
+            <a class="portfolio-header" href="">Portfolio</a>
+          </li>
+          <li>
+            <a class="contacts-header" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="mail-info" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="tel-info" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
+      <section class="button-container">
         <!-- Title and Button -->
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="title">Effective Solutions for Your Business</h1>
+        <button class="order-but" type="button">
+          <span class="but-text">Order Service</span> Service
+        </button>
       </section>
 
       <!-- Description Section2 -->
