--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <header class="header-container">
+    <header>
       <!-- Head Information -->
 
       <nav>
@@ -55,15 +55,15 @@
     <main>
       <section class="button-container">
         <!-- Title and Button -->
-        <h1 class="title">Effective Solutions for Your Business</h1>
-        <button class="order-but" type="button">
-          <span class="but-text">Order Service</span> Service
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">
+          <span class="but-text">Order Service</span>
         </button>
       </section>
 
       <!-- Description Section2 -->
-      <section>
-        <h2>Strategy Punctuality Diligence Technologies</h2>
+      <section class="description-section">
+        <!-- <h2>Strategy Punctuality Diligence Technologies</h2> -->
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -96,7 +96,7 @@
         </ul>
       </section>
       <!-- Team Photo Section3 -->
-      <section>
+      <section class="team-photo-section">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -134,7 +134,7 @@
         </ul>
       </section>
       <!-- Section 4 Portfolio -->
-      <section>
+      <section class="portfolio-section">
         <h2>Our Portfolio</h2>
         <ul>
           <li>
@@ -190,7 +190,7 @@
       <!-- Footer Info -->
 
       <a href="./index.html">WebStudio</a>
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
