--- a/index.html
+++ b/index.html
@@ -20,73 +20,74 @@
   </head>
 
   <body>
-    <header>
-      <!-- Head Information -->
-
-      <nav>
-        <a class="logo-web" href="./index.html"
-          >Web<span class="logo-studio">Studio</span></a
-        >
-        <ul>
-          <li>
-            <a class="studio-header" href="">Studio</a>
-          </li>
-          <li>
-            <a class="portfolio-header" href="">Portfolio</a>
-          </li>
-          <li>
-            <a class="contacts-header" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li>
-            <a class="mail-info" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="tel-info" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+    <!-- Head Information -->
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <a class="logo-web" href="./index.html"
+            >Web<span class="logo-studio">Studio</span></a
+          >
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="menu-link" href="">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="adress">
+          <ul class="contacts-list">
+            <li class="contacts-info">
+              <a class="mail-info" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-info">
+              <a class="tel-info" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
+      <!-- Title and Button -->
       <section class="button-container">
-        <!-- Title and Button -->
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">
-          <span class="but-text">Order Service</span>
-        </button>
+        <button class="btn" type="button">Order Service</button>
       </section>
 
       <!-- Description Section2 -->
       <section class="description-section">
         <!-- <h2>Strategy Punctuality Diligence Technologies</h2> -->
-        <ul>
-          <li>
+        <ul class="description-list">
+          <li class="description-text">
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="description-text">
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="description-text">
             <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="description-text">
             <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
@@ -136,13 +137,13 @@
       <!-- Section 4 Portfolio -->
       <section class="portfolio-section">
         <h2>Our Portfolio</h2>
-        <ul>
-          <li>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
             <img src="./images/img5.jpg" alt="Banking App Photo" width="360" />
             <h3>Banking App</h3>
             <p>App</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img6.jpg"
               alt="Cashless Payment Photo"
@@ -151,7 +152,7 @@
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img7.jpg"
               alt="Meditation App Photo"
@@ -160,12 +161,12 @@
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img src="./images/img8.jpg" alt="Taxi Service Photo" width="360" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img9.jpg"
               alt="Screen Illustrations Photo"
@@ -174,7 +175,7 @@
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img10.jpg"
               alt="Online Courses Photo"
@@ -189,7 +190,9 @@
     <footer>
       <!-- Footer Info -->
 
-      <a href="./index.html">WebStudio</a>
+      <a class="logo-web" href="./index.html"
+        >Web<span class="logo-studio">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
