--- a/index.html
+++ b/index.html
@@ -42,14 +42,10 @@
         <address class="adress">
           <ul class="contacts-list">
             <li class="contacts-info">
-              <a class="mail-info" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="contacts-info">
-              <a class="tel-info" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+              <a href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
@@ -191,7 +187,7 @@
       <!-- Footer Info -->
 
       <a class="logo-web" href="./index.html"
-        >Web<span class="logo-studio">Studio</span></a
+        >Web<span class="logo-studio-f">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
