--- a/index.html
+++ b/index.html
@@ -41,11 +41,15 @@
         </nav>
         <address class="adress">
           <ul class="contacts-list">
-            <li class="contacts-info">
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li>
+              <a class="contacts-info" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
-            <li class="contacts-info">
-              <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <li>
+              <a class="contacts-info" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
@@ -54,45 +58,45 @@
     <main>
       <!-- Title and Button -->
       <section class="button-container">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="title">Effective Solutions for Your Business</h1>
         <button class="btn" type="button">Order Service</button>
       </section>
 
-      <!-- Description Section2 -->
+      <!-- Description Section1 -->
       <section class="description-section">
         <!-- <h2>Strategy Punctuality Diligence Technologies</h2> -->
         <ul class="description-list">
           <li class="description-text">
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="title-description">Strategy</h3>
+            <p class="ph-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="description-text">
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="title-description">Punctuality</h3>
+            <p class="ph-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="description-text">
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="title-description">Diligence</h3>
+            <p class="ph-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="description-text">
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="title-description">Technologies</h3>
+            <p class="ph-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <!-- Team Photo Section3 -->
+      <!-- Team Photo Section2 -->
       <section class="team-photo-section">
         <h2>Our Team</h2>
         <ul>
@@ -130,7 +134,7 @@
           </li>
         </ul>
       </section>
-      <!-- Section 4 Portfolio -->
+      <!-- Section3 Portfolio -->
       <section class="portfolio-section">
         <h2>Our Portfolio</h2>
         <ul class="portfolio-list">
