--- a/index.html
+++ b/index.html
@@ -62,30 +62,29 @@
 
       <!-- Description Section1 -->
       <section class="description-section">
+        <h3 class="title-description">
+          Strategy Punctuality Diligence Technologies
+        </h3>
         <ul class="description-list">
           <li class="description-text">
-            <h3 class="title-description">Strategy</h3>
             <p class="ph-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="description-text">
-            <h3 class="title-description">Punctuality</h3>
             <p class="ph-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="description-text">
-            <h3 class="title-description">Diligence</h3>
             <p class="ph-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="description-text">
-            <h3 class="title-description">Technologies</h3>
             <p class="ph-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -95,12 +94,12 @@
       </section>
       <!-- Team Photo Section2 -->
       <section class="team-photo-section">
-        <h2>Our Team</h2>
+        <h2 class="team-photo-title">Our Team</h2>
         <ul>
           <li>
             <img src="./images/img1.jpg" alt="Designer" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name">Mark Guerrero</h3>
+            <p class="proffesion">Product Designer</p>
           </li>
           <li>
             <img
@@ -110,13 +109,13 @@
               width="264"
             />
 
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name">Tom Ford</h3>
+            <p class="proffesion">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img3.jpg" alt="Marketing Photo" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name">Camila Garcia</h3>
+            <p class="proffesion">Marketing</p>
           </li>
           <li>
             <img
@@ -126,19 +125,19 @@
               width="264"
             />
 
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Daniel Wilson</h3>
+            <p class="proffesion">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- Section3 Portfolio -->
       <section class="portfolio-section">
-        <h2>Our Portfolio</h2>
+        <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img src="./images/img5.jpg" alt="Banking App Photo" width="360" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-text">Banking App</h3>
+            <p class="portfolio-p">App</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -146,8 +145,8 @@
               alt="Cashless Payment Photo"
               width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-text">Cashless Payment</h3>
+            <p class="portfolio-p">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -155,13 +154,13 @@
               alt="Meditation App Photo"
               width="360"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-text">Meditation App</h3>
+            <p class="portfolio-p">App</p>
           </li>
           <li class="portfolio-item">
             <img src="./images/img8.jpg" alt="Taxi Service Photo" width="360" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-text">Taxi Service</h3>
+            <p class="portfolio-p">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -169,8 +168,8 @@
               alt="Screen Illustrations Photo"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-text">Screen Illustrations</h3>
+            <p class="portfolio-p">Design</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -178,8 +177,8 @@
               alt="Online Courses Photo"
               width="360"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-text">Online Courses</h3>
+            <p class="portfolio-p">Marketing</p>
           </li>
         </ul>
       </section>
