--- a/index.html
+++ b/index.html
@@ -54,37 +54,41 @@
       </address>
     </header>
     <main>
-      <!-- Title and Button -->
+      <!-- Title and Button Section1-->
       <section class="button-container">
         <h1 class="title">Effective Solutions for Your Business</h1>
         <button class="btn" type="button">Order Service</button>
       </section>
 
-      <!-- Description Section1 -->
+      <!-- Description Section2 -->
       <section class="description-section">
-        <h3 class="title-description">
+        <h2 class="title-description">
           Strategy Punctuality Diligence Technologies
-        </h3>
+        </h2>
         <ul class="description-list">
           <li class="description-text">
+            <h3 class="description-list-title">Strategy</h3>
             <p class="ph-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="description-text">
+            <h3 class="description-list-title">Punctuality</h3>
             <p class="ph-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="description-text">
+            <h3 class="description-list-title">Diligence</h3>
             <p class="ph-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="description-text">
+            <h3 class="description-list-title">Technologies</h3>
             <p class="ph-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -92,16 +96,16 @@
           </li>
         </ul>
       </section>
-      <!-- Team Photo Section2 -->
+      <!-- Team Photo Section3 -->
       <section class="team-photo-section">
         <h2 class="team-photo-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-photo-list">
             <img src="./images/img1.jpg" alt="Designer" width="264" />
             <h3 class="name">Mark Guerrero</h3>
             <p class="proffesion">Product Designer</p>
           </li>
-          <li>
+          <li class="team-photo-list">
             <img
               src="./images/img2.jpg"
               alt="Frontend
@@ -112,12 +116,12 @@
             <h3 class="name">Tom Ford</h3>
             <p class="proffesion">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-photo-list">
             <img src="./images/img3.jpg" alt="Marketing Photo" width="264" />
             <h3 class="name">Camila Garcia</h3>
             <p class="proffesion">Marketing</p>
           </li>
-          <li>
+          <li class="team-photo-list">
             <img
               src="./images/img4.jpg"
               alt="UI
@@ -130,7 +134,7 @@
           </li>
         </ul>
       </section>
-      <!-- Section3 Portfolio -->
+      <!-- Section4 Portfolio -->
       <section class="portfolio-section">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
