--- a/index.html
+++ b/index.html
@@ -187,9 +187,8 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <!-- Footer Info -->
-
+    <!-- Footer Info -->
+    <footer class="footer">
       <a class="logo-web" href="./index.html"
         >Web<span class="logo-studio-f">Studio</span></a
       >
