--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Head Information -->
     <header class="header">
       <nav class="nav">
-        <a class="logo-web" href="./index.html"
+        <a href="./index.html" class="logo-web"
           >Web<span class="logo-studio">Studio</span></a
         >
         <ul class="menu">
