--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         >
         <ul class="menu">
           <li class="menu-item">
-            <a class="menu-link" href="">Studio</a>
+            <a href="./index.html" class="menu-link">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="">Portfolio</a>
+            <a href="" class="menu-link">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="">Contacts</a>
+            <a href="" class="menu-link">Contacts</a>
           </li>
         </ul>
       </nav>
