--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         </nav>
         <address class="adress">
           <ul class="contacts-list">
-            <li>
+            <li class="menu-item">
               <a class="contacts-info" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="menu-item">
               <a class="contacts-info" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
@@ -64,7 +64,7 @@
     </header>
     <main>
       <!-- Title and Button Section1-->
-      <section class="section bg">
+      <section class="section1 bg">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="btn" type="button">Order Service</button>
