--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       <!-- Description Section2 -->
       <section class="section">
         <div class="container">
-          <div class="container-hidden"><h2 class="title-description">
+          <h2 class="title-description">
             Strategy Punctuality Diligence Technologies
-          </h2></div>
+          </h2>
           <h2 class="title-description">
             Strategy Punctuality Diligence Technologies
           </h2>
