--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </header>
     <main>
       <!-- Title and Button Section1-->
-      <section class="section1">
+      <section class="section">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="btn" type="button">Order Service</button>
