--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </header>
     <main>
       <!-- Title and Button Section1-->
-      <section class="section">
+      <section class="section1">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="btn" type="button">Order Service</button>
@@ -72,9 +72,9 @@
       </section>
 
       <!-- Description Section2 -->
-      <section class="section">
+      <section class="section2">
         <div class="container">
-          <h2 class="title-description">
+          <h2 class="visually-hidden">
             Strategy Punctuality Diligence Technologies
           </h2>
           <ul class="description-list">
@@ -110,7 +110,7 @@
         </div>
       </section>
       <!-- Team Photo Section3 -->
-      <section class="section bgs">
+      <section class="section3">
         <div class="container">
           <h2 class="team-photo-title">Our Team</h2>
           <ul class="team-list">
@@ -153,7 +153,7 @@
         </div>
       </section>
       <!-- Section4 Portfolio -->
-      <section class="section">
+      <section class="section4">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
