--- a/index.html
+++ b/index.html
@@ -64,12 +64,10 @@
     </header>
     <main>
       <!-- Title and Button Section1-->
-      <section class="section">
-        <div class="container-one">
-          <div class="container">
-            <h1 class="title">Effective Solutions for Your Business</h1>
-            <button class="btn" type="button">Order Service</button>
-          </div>
+      <section class="section titbut">
+        <div class="container">
+          <h1 class="title">Effective Solutions for Your Business</h1>
+          <button class="btn" type="button">Order Service</button>
         </div>
       </section>
 
