--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </header>
     <main>
       <!-- Title and Button Section1-->
-      <section class="section titbut">
+      <section class="section tit-a-but">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="btn" type="button">Order Service</button>
@@ -72,7 +72,7 @@
       </section>
 
       <!-- Description Section2 -->
-      <section class="section2">
+      <section class="section des-sec">
         <div class="container">
           <h2 class="visually-hidden">
             Strategy Punctuality Diligence Technologies
@@ -110,7 +110,7 @@
         </div>
       </section>
       <!-- Team Photo Section3 -->
-      <section class="section3">
+      <section class="section team-photo">
         <div class="container">
           <h2 class="team-photo-title">Our Team</h2>
           <ul class="team-list">
@@ -156,7 +156,7 @@
         </div>
       </section>
       <!-- Section4 Portfolio -->
-      <section class="section4">
+      <section class="section portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
