--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <!-- Head Information -->
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="nav">
           <a href="./index.html" class="logo-web"
             >Web<span class="logo-studio">Studio</span></a
