--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li class="portfolio-item-one">
+            <li class="portfolio-item">
               <img
                 src="./images/img5.jpg"
                 alt="Banking App Photo"
@@ -171,7 +171,7 @@
                 <p class="portfolio-p">App</p>
               </div>
             </li>
-            <li class="portfolio-item-two">
+            <li class="portfolio-item">
               <img
                 src="./images/img6.jpg"
                 alt="Cashless Payment Photo"
@@ -182,7 +182,7 @@
                 <p class="portfolio-p">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-item-three">
+            <li class="portfolio-item">
               <img
                 src="./images/img7.jpg"
                 alt="Meditation App Photo"
@@ -193,7 +193,7 @@
                 <p class="portfolio-p">App</p>
               </div>
             </li>
-            <li class="portfolio-item-one">
+            <li class="portfolio-item">
               <img
                 src="./images/img8.jpg"
                 alt="Taxi Service Photo"
@@ -204,7 +204,7 @@
                 <p class="portfolio-p">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-item-two">
+            <li class="portfolio-item">
               <img
                 src="./images/img9.jpg"
                 alt="Screen Illustrations Photo"
@@ -215,7 +215,7 @@
                 <p class="portfolio-p">Design</p>
               </div>
             </li>
-            <li class="portfolio-item-three">
+            <li class="portfolio-item">
               <img
                 src="./images/img10.jpg"
                 alt="Online Courses Photo"
