--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <!-- Footer Info -->
     <footer class="footer">
       <div class="container">
-        <a class="logo-web" href="./index.html"
+        <a class="logo-web-f" href="./index.html"
           >Web<span class="logo-studio-f">Studio</span></a
         >
         <p class="footer-text">
